clusters/x86/flux-system/notifications-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: flux-webhook.x86.thephysicsflat.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  name: http
  tls:
    - hosts:
        - flux-webhook.x86.thephysicsflat.xyz
      secretName: notification-webhook-tls
